--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -13,6 +13,7 @@
 @import "social";
 @import "header-parallax";
 @import "page-specific";
+@import "wp-plugins";
 
 html, body {
     overflow-x: hidden;
