--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -501,8 +501,14 @@ button {
   -o-transition: background-color, 0.5s;
   transition: background-color, 0.5s;
 }
-
 /* line 174, ../scss/_navbar.scss */
+.btn-danger .fa-arrow-left {
+  line-height: 19px;
+  margin-right: 5px;
+  margin-left: -5px;
+}
+
+/* line 180, ../scss/_navbar.scss */
 .btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active {
   background-color: #d15070;
   border-color: #d15070;
@@ -512,7 +518,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 180, ../scss/_navbar.scss */
+/* line 186, ../scss/_navbar.scss */
 .btn-info {
   background-color: #555555;
   border-color: #555555;
@@ -522,7 +528,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 185, ../scss/_navbar.scss */
+/* line 191, ../scss/_navbar.scss */
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active {
   background-color: #767676;
   border-color: #767676;
@@ -532,32 +538,32 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 190, ../scss/_navbar.scss */
+/* line 196, ../scss/_navbar.scss */
 .btn-block {
   margin-bottom: 20px;
   color: black;
   font-size: 100%;
 }
 
-/* line 198, ../scss/_navbar.scss */
+/* line 204, ../scss/_navbar.scss */
 .affix {
   top: 0;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 201, ../scss/_navbar.scss */
+  /* line 207, ../scss/_navbar.scss */
   .affix-top {
     position: fixed;
     top: 0;
   }
 }
 
-/* line 209, ../scss/_navbar.scss */
+/* line 215, ../scss/_navbar.scss */
 .single .affix, .single .affix-top {
   position: fixed;
 }
 @media only all and (max-width: 767px) {
-  /* line 209, ../scss/_navbar.scss */
+  /* line 215, ../scss/_navbar.scss */
   .single .affix, .single .affix-top {
     position: static;
   }
